--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Interview Assessment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:run": "cypress run --env allure=true --reporter mocha-allure-reporter",
+    "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
+    "allure:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "beforetest": "npm run clean:folders",
+    "tests": "npm run cy:run && npm run aftertest || true",
+    "aftertest": "npm run allure:report"
   },
   "author": "kishore",
   "license": "ISC",
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "^2.40.2",
-    "allure-commandline": "^2.32.0",
+    "allure-commandline": "^2.17.2",
+    "mocha-allure-reporter": "^1.4.0",
     "cypress": "^14.0.1"
   }
 }
