--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "^2.40.2",
-    "allure-commandline": "^2.17.2",
-    "mocha-allure-reporter": "^1.4.0",
-    "cypress": "^14.0.1"
+    "allure-commandline": "^2.32.2",
+    "cypress": "^14.0.1",
+    "mocha-allure-reporter": "^1.4.0"
+  },
+  "dependencies": {
+    "allure-js-commons": "^3.1.0"
   }
 }
